--- a/styles/default.css
+++ b/styles/default.css
@@ -2,6 +2,8 @@ body {
     padding: 0; margin: 0; border: 0;
     background-color: #e3e3e3;
 }
+h1,h2,ul,ol{margin: 0; padding: 0; border: 0;}
+
 .wrapper {
     background-color: #fff;
     width: auto;
@@ -12,9 +14,29 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
 }
-h1,h2,ul {margin: 0; padding: 0; border: 0;}
-.wrapper h1 {font-size: 36px; text-align: center;}
-.wrapper ul {list-style-type:none; text-align:center; padding-top: 20px;}
+.wrapper h1 {font-size: 36px; text-align: center; padding-bottom: 20px;}
+.wrapper ul {list-style-type:none; text-align:center; }
 .wrapper li {padding: 5px 0px;}
 .wrapper a {text-decoration: none; border: 2px dashed transparent;}
 .wrapper a:hover,.wrapper a:focus {border: 2px dashed #444;}
+
+.wrapper h2 {
+    border-top: 1px solid #aaa;
+    padding-top: 10px;
+}
+
+.wrapper.recipe .recipe_pic {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.wrapper.recipe ul, 
+.wrapper.recipe ol {
+    text-align: left; 
+    margin: 0 30px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.wrapper.recipe ol {
+    margin: 0 50px;
+}
